"""
TBD
"""
module(name = "axe.rs", version = "1.0.0")

bazel_dep(name = "rules_rust", version = "0.47.1")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)

crate.from_cargo(
    name = "app_deps",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
    ],
)

use_repo(crate, "app_deps")